--- a/bedspread/bunch.html
+++ b/bedspread/bunch.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Bunchberry Bedspread pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1VJWUvquBgpT-0ivTcZftMFo7jvJtfCKs&export=download&export=download"><img src="images/bunch.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Bunchberry Bedspread - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Bunchberry Bedspread</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-J. & P. COATS "KNIT-CRO-SHEEN," Art. A.64: <br>Single Size Spread-75 x 105 inches, excluding border: 68 balls of No. 25 Crystal Blue and 51 balls of No. 70 Blue Jewel. <br>Double Size Spread-90 x 105 inches, excluding border: 82 balls of No. 25 Crystal Blue and 60 balls of No. 70 Blue Jewel. <br>Milwards Steel Crochet Hook No. 7. 
+<br>J. & P. COATS "KNIT-CRO-SHEEN," Art. A.64: <br>Single Size Spread-75 x 105 inches, excluding border: 68 balls of No. 25 Crystal Blue and 51 balls of No. 70 Blue Jewel. <br>Double Size Spread-90 x 105 inches, excluding border: 82 balls of No. 25 Crystal Blue and 60 balls of No. 70 Blue Jewel. <br>Milwards Steel Crochet Hook No. 7. 
 <br>Each Motif measures 7 1/2 inches square. 
 <br><b>GAUGE:</b> 8 dc = 1 inch; 4 reds = 1 inch. 
 <br><b>MOTIF:</b> Starting at center with Blue Jewel, ch 6. Join with sl st to form ring. <br><b>1st rnd:</b> Ch 3, make 15 dc in ring. Join to top of ch-3. Break off and fasten. Attach Crystal Blue to joining. 
@@ -38,19 +29,7 @@ For <br><b>Single Size Spread</b>, make 10 rows of 14 motifs. For
 
 
 <br><br>
-
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
