--- a/bedspread/nose.html
+++ b/bedspread/nose.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Nosegay Bedspread pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td> 
 <p align="right"><a href="https://drive.google.com/uc?id=1gaqV_p1HDgq8dw99gl8bdtlc6-Ou9bqY&export=download&export=download"><img src="images/nose.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Nosegay Bedspread - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Nosegay Bedspread</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-CLARK'S O.N.T. or J. & P. COATS BIG BALL BEST SIX CORD MERCERIZED CROCHET, size 20 
+<br>CLARK'S O.N.T. or J. & P. COATS BIG BALL BEST SIX CORD MERCERIZED CROCHET, size 20 
 <br>SINGLE SIZE DOUBLE SIZE 44 balls of White or Ecru. 58 balls of White or Ecru. 
 <br>MILWARD'S STEEL CROCHET HOOK No. 8 or 9. 
 <br><b>GAUGE:</b> Each motif measures 4 inches in diameter after blocking. For a single size spread about 68 x 104 inches, make 17 x 26 motifs. For a double size spread about 92 x 104 inches, make 23 x 26 motifs. 
@@ -39,18 +30,7 @@ ch 5, skip 2 dc, dc in next sp, ch 1, sl st in next point on First Motif, ch 1, 
 <br><br>
 <img src="images/nose2.jpg">
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
