--- a/bedspread/pinepop.html
+++ b/bedspread/pinepop.html
@@ -1,19 +1,10 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><title>Pineappel Popcorn Bedspread pattern - Free Crochet Cotton Pattern</title></head>
+<html><head><title>Pineapple Popcorn Bedspread pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1yOJm5B5Ec-Emvn31ipUr6bR15Q2f9sh9&export=download"><img src="images/pinepop.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Pineapple Popcorn Bedspread - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pineapple Popcorn Bedspread</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
 <br><b>SINGLE SIZE:</b> J. & P. COATS KNIT-CRO-SHEEN 50 balls of White or Ecru, or 80 balls of any color.
 <br><b>DOUBLE SIZE:</b> J. & P. COATS KNIT-CRO-SHEEN 59 balls of White or Ecru, or 93 balls of any color.
@@ -37,18 +28,7 @@ Milward's Steel Crochet Hook No. 7.
 <br><br>
 <img src="images/pinepop2.jpg"><img src="images/pinepop3.jpg">
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
