--- a/bedspread/poin.html
+++ b/bedspread/poin.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Poinsettia Posy - Free Crochet Bedspread Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1d6IeZza9gt9_PfTRAhMpajPSvKp81g94&export=download&export=download"><img src="images/poin.jpg" align="right" border="0" width="400" height="300"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Poinsettia Posy - Free Crochet Cotton Bedspread Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Poinsettia Posy Bedspread</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-J. & P. COATS "KNIT-CRO-SHEEN", Art. A. 64; or CLARK'S "O.N.T." MERCERIZED BEDSPREAD COTTON: 
+<br>J. & P. COATS "KNIT-CRO-SHEEN", Art. A. 64; or CLARK'S "O.N.T." MERCERIZED BEDSPREAD COTTON: 
 <br><b>Single Size Spread:</b> 52 balls of No. 1 White, No. 61 Ecru or No. 42 Cream; or 76 balls of any color. 
 <br><b>Double Size Spread:</b> 69 balls of No. 1 White, No. 61 Ecru or No. 42 Cream; or 97 balls of any color; or 
 J. & P. COATS BEDSPREAD COTTON: 
@@ -44,19 +35,7 @@ Size Spread joining motifs as Second Motif was joined to First Motif (where corn
 <br><b>2nd rnd:</b> Ch 1, sc in loop just formed, * ch 7, sc in next loop. Repeat from * around, ending as on 1st rnd. 3rd rnd: Ch 1, sc in loop just formed, * * ch 7, in corner loop make sc, ch 7 and sc; * ch 7, sc in next loop. Repeat from * across to within next corner loop. Repeat from * around, ending with ch 7. Join to first sc. Break off and fasten. Block to measurements. 
 
 <br><br>
-
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
