--- a/bedspread/rosegarden.html
+++ b/bedspread/rosegarden.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Rose Garden Bedspread pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1bFVjx8pyQpc9cyhVU_XVUryZ04PwdckU&export=download&export=download"><img src="images/rosegarden.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Rose Garden - Free Crochet Bedspread Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Rose Garden Bedspread</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-J. & P. COATS "KNIT-CRO-SHEEN", Art. A. 64: 
+<br>J. & P. COATS "KNIT-CRO-SHEEN", Art. A. 64: 
 <br><b>Single Size Spread:</b> 90 balls of No. 46-A Mid Rose and 23 Balls of No. 122 Watermelon. <br><b>Double Size Spread:</b> 110 balls of No. 46-A Mid Rose and 28 balls of No. 122 Watermelon. Milwards Steel Crochet Hook No. 7. 
 <br>Motif measures 5 inches square 
 <br><b>MOTIF</b> Starting at center with Mid Rose, ch 5. Join with sl st to form ring. 
@@ -39,24 +30,11 @@ J. & P. COATS "KNIT-CRO-SHEEN", Art. A. 64:
 <br><b>2nd rnd:</b> Ch 3, dc in sp just formed, dc in next 18 dc, * 2 dc in next sp, dc in next dc, ch 2, skip next 2 dc, dc in next dc, 2 dc in next sp, dc in each dc across to within next sp. Repeat from * across to within next corner sp, in corner sp make 2 dc, ch 3 and 2 dc. Work remaining 3 sides in same manner, ending as before. 
 <br><b>3rd rnd:</b> Ch 3, dc in sp just formed, making 2 dc in each ch-2 sp across, dc in each dc across to within next corner sp, in corner sp make 2 dc, ch 3 and 2 dc. Work remaining 3 sides in same manner, ending the 4th side as on 15th rnd. Break off and fasten. Attach Watermelon in any corner sp. 
 <br><b>4th rnd:</b> In corner sp make sc, ch 2 and sc (picot made). Picot in next dc, * skip next dc, picot in next dc. Repeat from * across to within next corner sp, picot in corner sp. Work remaining 3 sides in same manner. Join to first sc. Break off and fasten. Block to measurements. 
-
 <br><br>
 <img src="images/rosegarden2.jpg">
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
 </font> 
 </td></tr></table></center>
 </body></html>
