--- a/bedspread/ballerina.html
+++ b/bedspread/ballerina.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Ballerina Bedspread pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1F3H5ByEGxAv2cL0UuVAdsyIukC7zi_Ml&export=download&export=download"><img src="images/ballerina.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Ballerina Bedspread - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Ballerina Bedspread</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-CLARK'S BIG BALL MERCERIZED CROCHET, size 20 
+<br>CLARK'S BIG BALL MERCERIZED CROCHET, size 20 
 <br>SINGLE SIZE DOUBLE SIZE 34 balls of White or Ecru. 43 balls of White or Ecru. 
 <br>MILWARD'S STEEL CROCHET HOOK No. 9. 
 <br><b>GAUGE:</b> Each motif measures about 4 1/4 inches square when blocked. For a single size spread about 72 x 106 inches, including edging, make 16 x 24 motifs. For a double size spread, about 90 x 106 inches, including edging, make 20 x 24 motifs. 
@@ -37,18 +28,7 @@ CLARK'S BIG BALL MERCERIZED CROCHET, size 20
 <br><br>
 <img src="images/ballerina2.jpg">
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
