--- a/bedspread/brose.html
+++ b/bedspread/brose.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Beauty Rose Bedspread pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=12Yeg8-Zeqx5yRKBFwX18GBdW67yc5a4P&export=download&export=download"><img src="images/brose.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Beauty Rose Bedspread - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Beauty Rose Bedspread</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
- Clark's O.N.T. Lustersheen, 55 skeins of White or Ecru, or 74 skeins of any color for double size spread; 46 skeins of White or Ecru, or 62 skeins of any color for single size spread.<br>
+<br>Clark's O.N.T. Lustersheen, 55 skeins of White or Ecru, or 74 skeins of any color for double size spread; 46 skeins of White or Ecru, or 62 skeins of any color for single size spread.<br>
 Milward's steel crochet hook No. 7.
 <br><b>GAUGE:</b> Each block measures about 5 inches square.
 For a double size spread, 90 x 110 inches, make 18 x 22 blocks. For a single size spread, 75 x 110 inches, make 15 x 22 blocks.
@@ -43,17 +34,7 @@ For a double size spread, 90 x 110 inches, make 18 x 22 blocks. For a single siz
 <br><br>
 <img src="images/brose2.jpg">
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
