--- a/bedspread/daisydell.html
+++ b/bedspread/daisydell.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Daisy Dell Bedspread pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=110vxcpyvO2IZQiqRZ3DNWQVgsTPUSlc9&export=download&export=download"><img src="images/daisydell.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Daisy In The Dell - Free Crochet Bedspread Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Daisy Dell Bedspread</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-J. & P. COATS "KNIT-CRO-SHEEN", Art. A. 64: <br>Single Size Spread: 60 balls of No. 1 White and 3 balls of No. 10-A Canary Yellow. 
+<br>J. & P. COATS "KNIT-CRO-SHEEN", Art. A. 64: <br>Single Size Spread: 60 balls of No. 1 White and 3 balls of No. 10-A Canary Yellow. 
 <br>Double Size Spread: 76 balls of No. 1 White and 3 balls of No. 10-A Canary Yellow. <br>Milwards Steel Crochet Hook No. 7. 
 <br><br>Motif measures 5 inches square 
 <br><b>FLOWER MOTIF:</b> Starting at center with Yellow, ch 4. 
@@ -42,22 +33,9 @@ J. & P. COATS "KNIT-CRO-SHEEN", Art. A. 64: <br>Single Size Spread: 60 balls of 
 <br><b>1st rnd:</b> Attach White in any corner loop, ch 3, dc in same loop, * 4 dc in each of next 10 loops, 2 dc in each of next 2 joined loops. Repeat from * across to within next corner loop, in corner loop make 2 dc, ch 3 and 2 dc. Work remaining 3 sides in same manner, ending with 2 dc in first loop used, ch 1, hdc in top of ch-3 to form last corner sp. <br><b>Next 3 rnds:</b> Ch 3, dc in same sp, dc in each dc around, making in each corner sp 2 dc, ch 3 and 2 dc; and ending with 2 dc in first sp used, ch 1, hdc in top of ch-3. At end of last rnd, end with ch 3. Join to top of ch-3. Break off and fasten. Block to measurements. 
 <br><br>
 <img src="images/daisydell2.jpg" alt="">
-
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
 </font> 
 </td></tr></table></center>
 </body></html>
