--- a/bedspread/pansys.html
+++ b/bedspread/pansys.html
@@ -2,12 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Pansy Spread Bedspread pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=16-VWfPVjb5x9TGvREy4gdXEFNGZuPIIP&export=download&export=download"><img src="images/pansys.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Pansy Spread Bedspread - Free Crochet Pattern</b></font><br><br>
-<font face="verdana" size="2"><b>MATERIALS:</b><br>
-AMERICAN THREAD COMPANY "DELUXE" CROCHET AND KNITTING COTTON, ARTICLE 346 OR "PURITAN" BEDSPREAD COTTON, ARTICLE 40
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Pansy Spread Bedspread</span></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+<br>AMERICAN THREAD COMPANY "DELUXE" CROCHET AND KNITTING COTTON, ARTICLE 346 OR "PURITAN" BEDSPREAD COTTON, ARTICLE 40
 <br> 39-250 yd. Balls Cream. 
 <br> 7-175 yd. Balls each of Shaded Lavenders and Shaded Yellows. 3-175 yd. Balls Green. 
 <br>Each Motif measures about 10 inches. 
@@ -44,10 +43,11 @@ st with ch 5 between cluster sts in each of the next 4 loops, ch 4, sc in next c
 <br><b>23rd Row:</b> * Ch 7, sl st in 4th st from hook for picot, ch 3, (picot loop) sc in next loop, repeat from * 10 times, picot loop, skip next loop, sc in next loop and continue picot loops across row, break thread. 
 <br><b>HEADING:</b> Join Cream in 1st sc, ch 5, work 1 tr c with ch 1 between each tr c in each sc across row, ch 4, turn. 
 <br><b>2nd Row:</b> Sl st over ch 1 loop, * ch 4, sl st over next ch 1 loop, repeat from * across row, break thread. Work 2 more ruffles in same manner having each band 101 inches in length. Sew ruffle in position overcasting the center of band to outside edges of top section. 
+
 <br><br>
 <img src="images/pansys2.jpg">
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
 
 </font> 
