--- a/bedspread/pur.html
+++ b/bedspread/pur.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>The Puritan Bedspread pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=15qbo11aLDkVoPGo3yj6MaqVoOewpT-_w&export=download&export=download"><img src="images/pur.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> The Puritan Bedspread - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">The Puritan Bedspread</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 or "DE LUXE" Quality MERCERIZED CROCHET COTTON, Article 346 52 balls White, Cream or Ecru. 
+<br>AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 40 or "DE LUXE" Quality MERCERIZED CROCHET COTTON, Article 346 52 balls White, Cream or Ecru. 
 <br>Steel crochet hook No. 7. 
 <br>Each Motif measures about 5 inches. 216 Motifs ( 12 x 18 ) are required to make spread measuring about 62 inches x 92 inches without the 7 inch fringe. 
 <br><b>1st Row:</b> Ch 6, join to form a ring. 
@@ -29,33 +20,19 @@ AMERICAN THREAD COMPANY The Famous "PURITAN" MERCERIZED CROCHET COTTON, Article 
 <br><b>9th Row:</b> Join thread in point of petal, ch 6, dc in same space, * ch 2, skip 1 st, dc in next st, ch 2, skip 1 st, dc in next st, ch 2, skip 1 st, trc in next st, skip 1st free st on next petal, trc in next st, ch 2, skip 1 st, dc in next st, ch 2, skip 1 st, dc in next st, ch 2, skip 1 st, dc in point of petal, ch 3, dc in same space, repeat from * all around, ch 2, join in 3rd st of ch. 
 <br><b>10th Row:</b> Ch 1, * 3 sc in 1st mesh, 1 sc in next dc, 2 sc in next mesh, sc in next dc, 2 sc in next mesh, sc in next dc, 2 sc in next mesh, skip next 2 trc, 2 sc in each of the next 3 meshes, 1 sc in each of the next 3 dc, repeat from * all around. 
 <br><b>11th Row:</b> Ch 5, skip 3 sc, 1 sc in each of the next 7 sc, ch 3, skip 4 sc, 1 sc in each of the next 17 sc, ch 3, skip 4 sc, 1 sc in each of the next 7 sc, repeat from beginning all around. 
-<br><b>12th Row:</b> Sl st into loop, ch 6, trc in same loop, * ch 1, trc in same loop, repeat from * 4 times, ** ch 3, skip 1 sc, 1 sc in each of the next 5 sc, ch 4, skip 1 sc of next group of sc, 1 sc in each of the next 15 sc, ch 4, skip 1 sc of next group of sc, 1 sc in each of the next 5 sc, ch 3, 1 trc in next loop, * ch 1, trc in same loop, repeat from * 5 times, repeat from ** all around, ch 3, join in 5th st of ch. <br><b>13th Row:</b> Sc in next loop, * ch 3, sc in next loop, repeat from * 5 times, ** ch 3, skip 1 sc, 1 sc in each of the next 3 sc, ch 3, dc in next loop, ch 3, skip 1 sc, 1 sc in each of the next 13 sc, ch 3, dc in next loop, ch 3, skip 1 sc, 1 sc in each of the next 3 sc, * ch 3, sc in next loop, repeat from * 7 times, repeat from ** all around completing the loops at corner. <br><b>14th Row:</b> Sl st to next loop, ch 2, sc in next loop, ch 2, sc in next loop, ch 3, sc in same loop (this is the corner), * ch 2, sc in next loop, repeat from * 3 times, * ch 2, dc in next loop, repeat from * once, ch 2, skip 2 sc, 1 sc in each of the next 9 sc, * ch 2, dc in next loop, repeat from * once, * ch 2, sc in next loop, repeat from * 4 times, ch 3, sc in same loop, * ch 2, sc in next loop, repeat from * 3 times, continue around in same manner. 
+<br><b>12th Row:</b> Sl st into loop, ch 6, trc in same loop, * ch 1, trc in same loop, repeat from * 4 times, ** ch 3, skip 1 sc, 1 sc in each of the next 5 sc, ch 4, skip 1 sc of next group of sc, 1 sc in each of the next 15 sc, ch 4, skip 1 sc of next group of sc, 1 sc in each of the next 5 sc, ch 3, 1 trc in next loop, * ch 1, trc in same loop, repeat from * 5 times, repeat from ** all around, ch 3, join in 5th st of ch. <br><b>13th Row:</b> Sc in next loop, * ch 3, sc in next loop, repeat from * 5 times, ** ch 3, skip 1 sc, 1 sc in each of the next 3 sc, ch 3, dc in next loop, ch 3, skip 1 sc, 1 sc in each of the next 13 sc, ch 3, dc in next loop, ch 3, skip 1 sc, 1 sc in each of the next 3 sc, * ch 3, sc in next loop, repeat from * 7 times, repeat from ** all around completing the loops at corner. 
+<br><b>14th Row:</b> Sl st to next loop, ch 2, sc in next loop, ch 2, sc in next loop, ch 3, sc in same loop (this is the corner), * ch 2, sc in next loop, repeat from * 3 times, * ch 2, dc in next loop, repeat from * once, ch 2, skip 2 sc, 1 sc in each of the next 9 sc, * ch 2, dc in next loop, repeat from * once, * ch 2, sc in next loop, repeat from * 4 times, ch 3, sc in same loop, * ch 2, sc in next loop, repeat from * 3 times, continue around in same manner. 
 <br><b>15th Row:</b> Ch 1, 2 sc in each of the next 2 loops, 5 sc in corner loop, 2 sc in each of the next 4 loops, 3 sc in each of the next 3 loops, skip 1 sc, 1 sc in each of the next 7 sc, continue all around in same manner. 
 <br><b>16th Row:</b> Working in back loop of sts only, work 1 sc in each sc working 3 sc in each corner, cut thread. Work 215 more motifs in same manner. 
 <br> Sew motifs together. 
 <br><b>EDGE:</b> Attach thread in corner and working across top, ch 4, dc in same space, * ch 1, skip 1 st, dc in next st, repeat from * all around working 1 dc, ch 1, 1 dc in center st at each corner, join. 
 <br><b>2nd Row:</b> * Ch 3, 2 dc in same space, skip one mesh, sl st in next mesh, ch 3, 2 dc in same space, skip 1 dc and 1 mesh, sl st in next dc, repeat from * across top edge only, cut thread. 
 <br><b>FRINGE:</b> Wind thread over a 7 inch cardboard. Cut one end. Using 14 strands, double in half and loop through every other mesh on the 3 sides. * Take half of one group of fringe and half of next group of fringe, knot together about 1/2 inch from 1st row of knots, repeat from * all around. Trim fringe evenly. 
-
-
-
 <br><br>
 <img src="images/pur2.jpg">
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a href="http://www.doilybox.com"><font face="verdana" size="2" color="#006699"><span style="font-weight:bold;">HOME</span></font></a>
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
 </font> 
 </td></tr></table></center>
 </body></html>
