--- a/bedspread/rose.html
+++ b/bedspread/rose.html
@@ -2,20 +2,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>Rose Bedspread pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0" cellpadding="5"><tr><td>
 <p align="right"><a href="https://drive.google.com/uc?id=1cc5OtLL8U8ecXpsaRuK3mMS5vnHGavGF&export=download&export=download"><img src="images/rose.jpg" align="right"  width="400" height="425" border="0"></a></p>
-<font face="trebuchet MS" color="#76769B" size="5"><b> Rose Bedspread - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;">Rose Bedspread</span></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-Royal Society Mercerized Knitting & Crochet Cotton Royal Society   Eversheen Knitting & Crochet Cotton
+<br>Royal Society Mercerized Knitting & Crochet Cotton Royal Society   Eversheen Knitting & Crochet Cotton
 62 balls for double bed  34 hanks for double bed 56 balls for single bed 31 hanks for single bed.
 <br>1 Milward's Steel Crochet Hook No. 7 or 8
 <br><b>Rose:</b> Ch 61, sl st in 1st ch to form ring.
@@ -43,25 +34,11 @@ Fill in other side to correspond. Fasten off.
 Now, with right side of work towards you, attach thread to leaf point directly across that in which the last dtr was just worked, ch 4, dc in next point, ch 7, make a dtr in next point retaining last 3 loops on hook, thread over twice, insert hook in next free point of center leaf and draw out a loop (6 loops on hook), work off 2 loops at a time, ch 7, dc in next point, ch 4, sl st to next point, fasten off. Fill in three other openings between leaves in same manner.
 <br><b>Finishing Row:</b> Attach thread with a sc at end point of center leaf, ch 2, 1 sc in same point, now work a row of ch 2 sps around entire motif, that is ch 2, skip 2 sts, 1 dc in next st and points of side leaves, put 2 sc with ch 2 between, continue with ch 2 sps, having 11 sps on each short side and 21 sps on each long side. Now work I row of sc in each dc and 2 sc in each sp, and 3 sc in each ch 2. Fasten off.
 Join motifs as shown in Photograph, sewing together evenly, for double bed alternating rows across of 17 and 16 motifs; for single bed alternating row across of 14 and 13 motifs; and 13 motifs in length 215 motifs for double bed and 194 motifs for single bed.
-
-
 <br><br>
 <img src="images/rose1.jpg">
 <br><br>
-
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<font face="verdana" color="#8B0000" size="4"><span style="font-weight:bold;"></span></font><br><br>
 <br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
-<br><br>
-
 </font> 
 </td></tr></table></center>
 </body></html>
