--- a/bedspread.html
+++ b/bedspread.html
@@ -38,10 +38,10 @@
             </ul>
         </div>
     </div>
-   
-	
-	
+ 	
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Free Crochet Bedspread Patterns</p></font></center>
+
+<div class="grid-view"><div class="prev"><a href="bedspread/crystal.html"><img src="bedspread/images/crystalt.jpg" alt="" /></a></div><p><a href="bedspread/crystal.html">Crystal Web</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="bedspread/pansys.html"><img src="bedspread/images/pansyst.jpg" alt="" /></a></div><p><a href="bedspread/pansys.html">Pansy Spread</a></p></div>
 
